--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,13 @@ h4 {
         text-align: left;
     }
 
+    body {
+    font-family: "Borsok";
+    padding-bottom: 5px;
+    
+}
+
+
     .container {
         padding: 0 15px; /* Added padding around the content inside the header */
     }
