--- a/styles.css
+++ b/styles.css
@@ -157,5 +157,10 @@ h4 {
     .countdown {
         bottom: 65px;
     }
+
+    /* Adjust the countdown position to fit the extended height */
+    .countdown {
+        bottom: 0px; /* Set the desired distance from the bottom */
+    }
 }
 
