--- a/styles.css
+++ b/styles.css
@@ -154,8 +154,10 @@ h4 {
         margin-bottom: 0px;
     }
 
-    .countdown {
-        bottom: 65px;
+    .map-rotation {
+        margin-bottom: 1px;
+        padding-top: 1rem;
+        
     }
 
     /* Adjust the countdown position to fit the extended height */
