--- a/styles.css
+++ b/styles.css
@@ -155,11 +155,10 @@ h4 {
     }
 
     .map-rotation {
-        margin-bottom: 1px;
+        padding-bottom: 0rem;
         padding-top: 1rem;
-        
-    }
 
+    }
     /* Adjust the countdown position to fit the extended height */
     .countdown {
         bottom: 0px; /* Set the desired distance from the bottom */
