--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ html, body {
 .map-rotations {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .map-rotation {
