--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ h4 {
     }
 
     .map-container {
-        padding: 5px;
+        padding: 0px;
         border-radius: 10px;
         background-color: rgba(51, 51, 51, 0.0);
         margin-bottom: 0px;
@@ -156,9 +156,16 @@ h4 {
 
     .map-rotation {
         padding-bottom: 0rem;
-        padding-top: 0rem;
+        padding-top: 1rem;
         justify-content: space-evenly;
-}
+    }
+
+    .map-image {
+        max-width: 100%;
+        height: auto;
+        border-radius: 8px;
+        padding: 0px;
+    }
 
     }
     /* Adjust the countdown position to fit the extended height */
